Add connection to db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,9 @@ services:
       - DB_PASSWORD=postgres
       - DB_DB=postgres
       - DB_HOST=db
-      - DB_TABLE="postgres"
+      - DB_TABLE=postgres
       - DB_PORT=5432
-      - SSL_MODE=disabled
+      - SSL_MODE=disable
     ports:
       - "8080:8080"
     depends_on:
